[gd_scene load_steps=2 format=3 uid="uid://dpoekypmevp47"]

[ext_resource type="Script" path="res://src/gui/user_input/editable_rich_text_label.gd" id="1_lrrj1"]

[node name="EditableRichTextLabel" type="RichTextLabel"]
offset_right = 778.0
offset_bottom = 168.0
auto_translate = false
focus_mode = 2
bbcode_enabled = true
text = " "
selection_enabled = true
visible_characters_behavior = 1
script = ExtResource("1_lrrj1")

[node name="CodeEdit" type="CodeEdit" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
auto_translate = false
text = " "
wrap_mode = 1
scroll_fit_content_height = true
line_folding = true
gutters_draw_line_numbers = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true

[connection signal="focus_exited" from="CodeEdit" to="." method="_on_code_edit_focus_exited"]
[connection signal="gui_input" from="CodeEdit" to="." method="_on_code_edit_gui_input"]
[connection signal="text_changed" from="CodeEdit" to="." method="_on_code_edit_text_changed"]
[connection signal="text_set" from="CodeEdit" to="." method="_on_code_edit_text_set"]
[connection signal="visibility_changed" from="CodeEdit" to="." method="_on_code_edit_visibility_changed"]
